[package]
name = "skedge"
description = "Ergonomic single-process job scheduling for Rust programs."
version = "0.1.1"
edition = "2018"
authors = ["Ben Lovy <ben@deciduously.com>"]
documentation = "https://docs.rs/skedge"
homepage = "https://crates.io/crates/skedge"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["utility", "scheduling"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/deciduously/skedge"

[lib]

crate-type = ["rlib", "cdylib"]

[features]
default = []
ffi = []

[dependencies]

chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4"
libc = { version = "0.2.0" }
rand = "0.8"
regex = "1.5"
thiserror = "1"

[dev-dependencies]

pretty_assertions = "0.7"

[profile]
[profile.release]
lto = true