[package]
authors = ["Ben Lovy <ben@deciduously.com>"]
description = "Ergonomic single-process job scheduling for Rust programs."
documentation = "https://docs.rs/skedge"
edition = "2021"
homepage = "https://crates.io/crates/skedge"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["utility", "scheduling"]
license = "BSD-3-Clause"
name = "skedge"
readme = "README.md"
repository = "https://github.com/deciduously/skedge"
version = "0.2.1"
rust-version = "1.80"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
ffi = []

[dependencies]
chrono = "0.4"
libc = "0.2"
rand = "0.8"
regex = "1.5"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
strip = true
