[package]
authors = ["Ben Lovy <ben@deciduously.com>"]
description = "Ergonomic single-process job scheduling for Rust programs."
documentation = "https://docs.rs/skedge"
edition = "2021"
homepage = "https://crates.io/crates/skedge"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["utility", "scheduling"]
license = "MIT"
name = "skedge"
readme = "README.md"
repository = "https://github.com/deciduously/skedge"
version = "0.3.1"
rust-version = "1.80"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
random = ["dep:rand"]
ffi = ["dep:libc"]

[dependencies]
jiff = "0.1"
libc = { version = "0.2", optional = true }
rand = { version = "0.8", optional = true }
regex = "1.5"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
strip = true
